# secret-hitler

./: .gitignore  CMakeLists.txt  README.md  server_test.html
client/: index.html  package-lock.json  package.json
client/src/: App.tsx  ci.yml  env.d.ts  styles.css  vite-env.d.ts
engine/: CMakeLists.txt
engine/include/sh/: game.hpp
engine/src/: game.cpp
engine/tests/: main.cpp  players_10_tests.cpp  players_5_tests.cpp  players_6_tests.cpp  players_7_tests.cpp  players_8_tests.cpp  players_9_tests.cpp  test_support.hpp
server/: CMakeLists.txt
server/include/sh/: room_registry.hpp
server/src/: main.cpp
